  missing methods: BIND, LINK, MKCALENDAR, MKREDIRECTREF, REBIND, UNBIND, UNLINK.

- The Docker images generated by Zeek's CI process now contain OCI-approved annotation
  labels containing various metadata about the image. See
  https://github.com/opencontainers/image-spec/blob/main/annotations.md for more details
  about the labels.

Changed Functionality
---------------------

- A Zeekctl-managed Zeek cluster now uses the ZeroMQ cluster backend by default.

- The manager node of a Zeekctl-managed Zeek cluster now listens on 127.0.0.1:27759 for
  WebSocket connections by default. This can be disabled with the ``UseWebSocket`` setting
  in ``zeekctl.cfg``, or adapted using the ``WebSocketHost`` and ``WebSocketPort``
  settings.

- The var-extraction-uri.zeek policy does not include the path in the ``uri_vars`` field
  anymore.

- The ``get_current_packet_header()`` BIF now populates the returned record also for
  fragmented IP datagrams.

- The QUIC parser discards packets with the ``fixed_bit`` field set to 0, rather than
  continuing to parse and potentially running into analyzer violations.

- The Notice framework's suppression implementation was changed to batch suppression
  information for up up to 10msec before distributing it to other nodes in a Zeek cluster.
  This reduces cluster communication overhead when there's a storm of notices
  generated. Two new options, ``Notice::suppression_batch_period`` and
  ``Notice::suppression_batch_max_size`` can be used to tune this behavior. See their
  documentation for details. This most notably reduces CPU usage and cluster event traffic
  during cluster startup.

- Non-printable ASCII control characters now always result in ``\uXXXX`` characters when
  logging them as JSON. This follows the JSON standard more closely. Previously, they
  would have been logged in the ``\xXX`` format that Zeek typically uses. For example, an
  HTTP request with a non-printable character in the URI would have a ``uri`` field that