@@ -1,0 +1,13 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+#separator \x09
+#set_separator	,
+#empty_field	(empty)
+#unset_field	-
+#path	conn
+#open XXXX-XX-XX-XX-XX-XX
+#fields	ts	uid	id.orig_h	id.orig_p	id.resp_h	id.resp_p	proto	service	duration	orig_bytes	resp_bytes	conn_state	local_orig	local_resp	missed_bytes	history	orig_pkts	orig_ip_bytes	resp_pkts	resp_ip_bytes	tunnel_parents	ip_proto
+#types	time	string	addr	port	addr	port	enum	string	interval	count	count	string	bool	bool	count	string	count	count	count	count	set[string]	count
+XXXXXXXXXX.XXXXXX	CHhAvVGS1DHFjwGM9	172.17.0.2	36343	1.1.1.1	53	udp	dns	0.013961	54	172	SF	T	F	0	Dd	1	82	1	200	-	17
+XXXXXXXXXX.XXXXXX	ClEkJM2Vm5giqnMf4h	10.0.0.4	56351	1.1.1.1	53	udp	dns	0.014563	28	124	SF	T	F	0	Dd	1	56	1	152	-	17
+XXXXXXXXXX.XXXXXX	C4J4Th3PJpwUYZZ6gc	10.0.0.4	56352	1.1.1.1	53	udp	dns	0.012639	28	140	SF	T	F	0	Dd	1	56	1	168	-	17
+#close XXXX-XX-XX-XX-XX-XX
