@@ -1,0 +1,4 @@
+# @TEST-DOC: Tests the pcapng packet source, including sending events
+#
+# @TEST-EXEC: zeek -C -r $TRACES/pcapng-multi-interface.pcapng %INPUT > out
+# @TEST-EXEC: btest-diff conn.log
